[project]
name = "leetcode-visualiser"
version = "1.0.0"
description = "A FastAPI application for visualizing LeetCode statistics"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "jinja2",
    "python-multipart",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py38"

# Exclude directories
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "N815",  # mixedCase variable names (used by LeetCode API)
    "E712",  # comparison to False/True (pandas idiom)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

