[project]
name = "leetcode-visualiser"
version = "1.0.0"
description = "A FastAPI application for visualizing LeetCode statistics"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "jinja2",
    "python-multipart",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "numpy>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
